infra/argocd/argocd-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/hostname: argocd.wittnerlab.com
    external-dns.alpha.kubernetes.io/target: 5.135.136.115
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.wittnerlab.com`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: argocd-tls
